ix: prevent layout overflow on wide viewports and footer nav

--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -74,6 +74,7 @@
   text-transform: none;
   padding: 22px 15px 20px 14px;
   letter-spacing: normal;
+  align-items: flex-start;
 
   @include tablet {
     font-size: $font-size-h4-tablet;
